Fix overflow

--- a/main.css
+++ b/main.css
@@ -13,6 +13,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  overflow: hidden;
+}
 a {
   text-decoration: none;
 }
